--- a/dochazka.html
+++ b/dochazka.html
@@ -30,7 +30,7 @@
     <tr><th>Jméno</th><th>Směna</th><th>Funkce</th><th>Kód</th><th>Čas příchodu</th></tr>
   </table>
   <script>
-    const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxmYbf1ltQP9z0024jRe3DBL4xmxdMaZWYoid6wswKe2vclbYaAARUuW53ouvRQyMUCzw/exec";
+    const SCRIPT_URL = "https://corsproxy.io/?https://script.google.com/macros/s/AKfycbxmYbf1ltQP9z0024jRe3DBL4xmxdMaZWYoid6wswKe2vclbYaAARUuW53ouvRQyMUCzw/exec";
 
     let zamestnanci = [];
     let pritomni = new Map();
