--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <a href="picking.html">Picking</a>
     <a href="barcode.html">Barcode</a>
     <a href="zony.html">Zóny tisk</a>
-    <a href="vstupy.html">Wait BRA</a>
+    <a href="bra_pc.html">Wait BRA</a>
     <a href="dochazka.html">Docházka</a>
     <a href="plan_smen.html">Plán směn</a>
   </div>
