--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <body>
 
   <header>
-    <img src="logo.png" alt="Sportisimo Logo" class="logo">
+    <img src="{{ url_for('static', filename='logo.png') }}" alt="Logo">
     <div class="info-box">
       <div id="datumcas"></div>
     </div>
