--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <body>
 
   <header>
-    <img src="{{ url_for('static', filename='logo.png') }}" alt="Logo">
+    <img src="static/logo.png" alt="Logo">
     <div class="info-box">
       <div id="datumcas"></div>
     </div>
