--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
     }
 
     img.logo {
-      max-width: 250px;
+      max-width: 150px;  /* Tady uprav hodnotu podle toho, jak velké chceš logo. */
+      height: auto;
       margin-bottom: 20px;
+    }
+
     }
 
     .info-box {
