--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
     }
 
     img.logo {
-      max-width: 150px;  /* Tady uprav hodnotu podle toho, jak velké chceš logo. */
+      max-width: 150px;  /* Nastav velikost loga dle potřeby */
       height: auto;
       margin-bottom: 20px;
-    }
-
     }
 
     .info-box {
@@ -65,7 +63,7 @@
 <body>
 
   <header>
-    <img src="static/logo.png" alt="Logo">
+    <img src="static/logo.png" alt="Logo" class="logo">
     <div class="info-box">
       <div id="datumcas"></div>
     </div>
