--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 20px;
       font-family: 'Open Sans', sans-serif;
-      background-color: #2A64AD;
+      background-color: #0066b3;
       color: white;
       text-align: center;
       padding: 20px;
@@ -19,8 +19,7 @@
     }
 
     img.logo {
-      max-width: 150px;  /* Nastav velikost loga dle potřeby */
-      height: auto;
+      max-width: 250px;
       margin-bottom: 20px;
     }
 
@@ -43,7 +42,7 @@
 
     .nav a {
       background-color: white;
-      color: #2A64AD;
+      color: #0066b3;
       padding: 20px 0;
       border-radius: 10px;
       text-decoration: none;
@@ -63,7 +62,7 @@
 <body>
 
   <header>
-    <img src="static/logo.png" alt="Logo" class="logo">
+    <img src="logo.png" alt="Sportisimo Logo" class="logo">
     <div class="info-box">
       <div id="datumcas"></div>
     </div>
@@ -74,7 +73,8 @@
     <a href="barcode.html">Barcode</a>
     <a href="zony.html">Zóny tisk</a>
     <a href="bra_pc.html">Wait BRA</a>
-    <a href="dochazka.html">Docházka</a>
+    <a href="dochazka.html">Příchody</a>
+    <a href="dovolena_app/templates/dovolena.html">Dovolená</a>
     <a href="plan_smen.html">Plán směn</a>
   </div>
 
