--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <body>
 
   <header>
-    <img src="logo.png" alt="Sportisimo Logo" class="logo">
+    <img src="static/logo.png" alt="Sportisimo Logo" class="logo">
     <div class="info-box">
       <div id="datumcas"></div>
     </div>
