--- a/dochazka.html
+++ b/dochazka.html
@@ -323,7 +323,7 @@
         <div>
           <!-- Logo -->
           <div class="logo-container">
-          <img src="logo.png" alt="Logo firmy" class="logo">
+          <img src="static/logo.png" alt="Sportisimo Logo" class="logo">
         </div>
           <label for="datum">Datum:</label>
           <input type="date" id="datum">
