--- a/bra_pc.html
+++ b/bra_pc.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>WaitBRA (PC verze)</title>
   <style>
-    body { background: #2A64AD; color: white; font-family: 'Open Sans', sans-serif; padding: 30px; }
+    body { background: #0066b3; color: white; font-family: 'Open Sans', sans-serif; padding: 30px; }
     h1 { margin-top: 0; }
     .panel { display: flex; align-items: center; gap: 18px; margin-bottom: 20px; }
     .uploader label { font-weight: normal; }
@@ -17,7 +17,7 @@
       margin-right: 15px;
       width: 270px;
       background: #fff;
-      color: #2A64AD;
+      color: #0066b3;
       font-weight: bold;
       outline: none;
       transition: border 0.2s;
@@ -34,7 +34,7 @@
     .statnum { color: #fff; font-size: 22px; font-weight: bold; }
     #exportBtn {
       background: #ffd700;
-      color: #2A64AD;
+      color: #0066b3;
       font-weight: bold;
       padding: 10px 18px;
       border: none;
