--- a/barcode.html
+++ b/barcode.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
   <style>
     body {
-      background: #2A64AD;
+      background: #0066b3;
       font-family: 'Open Sans', sans-serif;
       color: white;
       padding: 0;
@@ -76,16 +76,16 @@
     }
     .zpet-button {
       background-color: #ffffff;
-      color: #2A64AD;
+      color: #0066b3;
       font-weight: bold;
-      border: 2px solid #2A64AD;
+      border: 2px solid #0066b3;
       border-radius: 6px;
       padding: 8px 16px;
       font-size: 16px;
       cursor: pointer;
     }
     .zpet-button:hover {
-      background-color: #2A64AD;
+      background-color: #0066b3;
       color: white;
     }
   </style>
