--- a/picking.html
+++ b/picking.html
@@ -10,7 +10,7 @@
       margin: 90px;
       padding: 20px;
       font-family: Arial, sans-serif;
-      background-color: #2A64AD;   /* modré pozadí */
+      background-color: #0066b3;   /* modré pozadí */
       color: #000000;               /* tmavý text */
       display: flex;
       flex-direction: column;
@@ -29,7 +29,7 @@
     h1 {
       text-align: center;
       margin-top: 10px;
-      color: #2A64AD;
+      color: #0066b3;
       font-size: 24px;
     }
 
@@ -136,16 +136,16 @@
     .summary p {
       display: inline;
       margin: 0 20px;
-      color: #2A64AD;           /* bílý text */
+      color: #0066b3;           /* bílý text */
     }
     .summary .value {
       color: #DB4B3E;           /* červená barva pro čísla */
     }
     .zpet-button {
       background-color: #ffffff;
-      color: #2A64AD;
+      color: #0066b3;
       font-weight: bold;
-      border: 2px solid #2A64AD;
+      border: 2px solid #0066b3;
       border-radius: 6px;
       padding: 8px 16px;
       font-size: 16px;
@@ -153,7 +153,7 @@
       margin-top: 20px;
     }
     .zpet-button:hover {
-      background-color: #2A64AD;
+      background-color: #0066b3;
       color: white;
     }
   </style>
