--- a/plan_smen.html
+++ b/plan_smen.html
@@ -5,7 +5,7 @@
   <title>Plán směn - PDF</title>
   <style>
     body {
-      background: #2A64AD;
+      background: #0066b3;
       color: white;
       font-family: Arial, sans-serif;
       text-align: center;
@@ -21,9 +21,9 @@
     }
     .zpet-button {
       background-color: #ffffff;
-      color: #2A64AD;
+      color: #0066b3;
       font-weight: bold;
-      border: 2px solid #2A64AD;
+      border: 2px solid #0066b3;
       border-radius: 6px;
       padding: 8px 16px;
       font-size: 16px;
@@ -32,7 +32,7 @@
       transition: all 0.2s;
     }
     .zpet-button:hover {
-      background-color: #2A64AD;
+      background-color: #0066b3;
       color: white;
     }
     .pdf-container {
