--- a/zony.html
+++ b/zony.html
@@ -8,7 +8,7 @@
   <style>
     body {
       font-family: 'Open Sans', sans-serif;
-      background-color: #2A64AD;
+      background-color: #0066b3;
       color: white;
       margin: 0;
       padding: 30px;
@@ -174,9 +174,9 @@
     }
     .zpet-button {
       background-color: #ffffff;
-      color: #2A64AD;
+      color: #0066b3;
       font-weight: bold;
-      border: 2px solid #2A64AD;
+      border: 2px solid #0066b3;
       border-radius: 6px;
       padding: 8px 16px;
       font-size: 16px;
@@ -184,7 +184,7 @@
       margin-top: 20px;
     }
     .zpet-button:hover {
-      background-color: #2A64AD;
+      background-color: #0066b3;
       color: white;
     }
   </style>
