--- a/dochazka.html
+++ b/dochazka.html
@@ -549,11 +549,13 @@
         let cellClass = pr ? 'pritomen-cell' : '';
         if (pr && zam.prac_pomer === "AGENT") cellClass += ' agent';
         gridHTML += `<div class="zamestnanec-cell${cellClass ? ' ' + cellClass : ''}">
-          <div>${zam.jmeno}</div>
-          <div style="font-size:11px; opacity:0.8;">${zam.smena || ""}</div>
-          <div style="font-size:11px; opacity:0.7;">${zam.funkce || ""}</div>
-          <div style="font-size:11px; opacity:0.6;">${zam.prac_pomer || ""}</div>
-        </div>`;
+        <div>${zam.jmeno}</div>
+        <div style="font-size:11px; opacity:0.8;">
+          ${zam.smena || ""}${zam.funkce ? " / " + zam.funkce : ""}
+        </div>
+        <div style="font-size:11px; opacity:0.6;">${zam.prac_pomer || ""}</div>
+      </div>`;
+
       });
 
       const nepocet = zamList.length - pocetPritomnych;
